natureza_v0.2 - indentation fix
