# src/middleware/validateUser.js
@@ -1,89 +1,105 @@
 const Usuario = require("../models/Usuario");
 
 const validarUsuario = (schema) => async (req, res, next) => {
+  if (!req.body.nome || !req.body.email) {
+    return res.status(400).json({ error: "O nome e email são obrigatórios" });
+  }
 
-	if (!req.body.nome || !req.body.email) { return res.status(400).json({error: "O nome e email são obrigatórios"})
-	}
-	
-	function validarData(data) {
-		// Expressão regular para verificar se a data está no formato YYYY-MM-DD
-		const regex = /^\d{4}-\d{2}-\d{2}$/;
-		
-		if (regex.test(data)) {
-			const [ano, mes, dia] = data.split('-');
-			const anoInt = parseInt(ano, 10);
-			const mesInt = parseInt(mes, 10);
-			const diaInt = parseInt(dia, 10);
-			
-			if (
-				anoInt >= 1000 && anoInt <= 9999 &&
-				mesInt >= 1 && mesInt <= 12 &&
-				diaInt >= 1 && diaInt <= 31
-				) {
-				return true; // A data é válida
-			}
-		} return false
-	}
+  function validarData(data) {
+    // Expressão regular para verificar se a data está no formato YYYY-MM-DD
+    const regex = /^\d{4}-\d{2}-\d{2}$/;
 
-	if (!validarData(req.body.data_nascimento)) {
-		return res.status(400).json({error: "Por favor, digite a data de nascimento no formato YYYY-MM-DD"})
-	}
+    if (regex.test(data)) {
+      const [ano, mes, dia] = data.split("-");
+      const anoInt = parseInt(ano, 10);
+      const mesInt = parseInt(mes, 10);
+      const diaInt = parseInt(dia, 10);
 
-	
-	if(!req.body.senha) { return res.status(400).json({error: "Insira uma senha."})}
+      if (
+        anoInt >= 1000 &&
+        anoInt <= 9999 &&
+        mesInt >= 1 &&
+        mesInt <= 12 &&
+        diaInt >= 1 &&
+        diaInt <= 31
+      ) {
+        return true; // A data é válida
+      }
+    }
+    return false;
+  }
 
-	if (!req.body.cpf || req.body.cpf.length !== 11) {
+  if (!validarData(req.body.data_nascimento)) {
+    return res
+      .status(400)
+      .json({
+        error: "Por favor, digite a data de nascimento no formato YYYY-MM-DD",
+      });
+  }
 
-		return res.status(400).json({ error: "O CPF precisa ser um número com 11 dígitos (string)." });
-	}
-	
-	if (!req.body.sexo ) { return res.status(400).json({error: "No item sexo escolha entra as opções: feminino, masculino ou outros."})}
+  if (!req.body.senha) {
+    return res.status(400).json({ error: "Insira uma senha." });
+  }
 
+  if (!req.body.cpf || req.body.cpf.length !== 11) {
+    return res
+      .status(400)
+      .json({ error: "O CPF precisa ser um número com 11 dígitos (string)." });
+  }
 
+  if (!req.body.sexo) {
+    return res
+      .status(400)
+      .json({
+        error:
+          "No item sexo escolha entra as opções: feminino, masculino ou outros.",
+      });
+  }
 
-	try {
-		// Verificar se o CPF já existe na tabela Usuarios
-		const usuario = await Usuario.findOne({ where: { cpf: req.body.cpf } });
-	
-		if (usuario) {
-			return res.status(409).json({ error: "CPF já cadastrado." });
-		}
+  try {
+    // Verificar se o CPF já existe na tabela Usuarios
+    const usuario = await Usuario.findOne({ where: { cpf: req.body.cpf } });
 
-	} catch (error) {
-		console.error("Erro ao buscar CPF na tabela Usuarios:", error);
-		return res.status(500).json({ error: "Não foi possível cadastrar seu CPF." });
-	}
+    if (usuario) {
+      return res.status(409).json({ error: "CPF já cadastrado." });
+    }
+  } catch (error) {
+    console.error("Erro ao buscar CPF na tabela Usuarios:", error);
+    return res
+      .status(500)
+      .json({ error: "Não foi possível cadastrar seu CPF." });
+  }
 
-// Validar email do usuário
-	function validarEmail(email) {
-		const regex = /^[^\s@]+@[^\s@]+\.[^\s@]+$/;
-		return regex.test(email);
-	}
-	
-	if (!validarEmail(req.body.email)) {
-		return res.status(400).json({ error: "Insira um email válido" });
-	}
-	
-	try {
-		const usuario = await Usuario.findOne({ where : { email: req.body.email}})
+  // Validar email do usuário
+  function validarEmail(email) {
+    const regex = /^[^\s@]+@[^\s@]+\.[^\s@]+$/;
+    return regex.test(email);
+  }
 
-		if (usuario) {
-			return res.status(409).json({error: "Email já cadastrado."})}
-	} catch (error) {
-		return res.status(500).json({ error: "Não foi possível cadastrar seu email." });
-		
-	}
+  if (!validarEmail(req.body.email)) {
+    return res.status(400).json({ error: "Insira um email válido" });
+  }
 
-	try {
-		await schema.validate( { body } = req.body	)
-				
-		return next()
+  try {
+    const usuario = await Usuario.findOne({ where: { email: req.body.email } });
 
-	} catch (error) {
-		//console.error(error, error)
-		return res.status(400).json({error})
-	}
-}
+    if (usuario) {
+      return res.status(409).json({ error: "Email já cadastrado." });
+    }
+  } catch (error) {
+    return res
+      .status(500)
+      .json({ error: "Não foi possível cadastrar seu email." });
+  }
 
+  try {
+    await schema.validate(({ body } = req.body));
 
-module.exports = validarUsuario
+    return next();
+  } catch (error) {
+    //console.error(error, error)
+    return res.status(400).json({ error });
+  }
+};
+
+module.exports = validarUsuario;
