# src/models/Local.js
@@ -3,25 +3,26 @@ const { connection } = require("../database/connection");
 const Usuario = require("./Usuario");
 //const { hash } = require("bcryptjs");
 
-const Local = connection.define('locais', {
-    nome: {
-        type: DataTypes.STRING
+const Local = connection.define("locais", {
+  nome: {
+    type: DataTypes.STRING,
+  },
+  local_endereco: {
+    type: DataTypes.STRING,
+  },
+  usuarioId: {
+    type: DataTypes.INTEGER,
+    references: {
+      // This is a reference to another model
+      model: Usuario,
+      // This is the column name of the referenced model
+      key: "id",
     },
-    local_endereco: {
-        type: DataTypes.STRING,
-    },
-    usuarioId: {
-        type: DataTypes.INTEGER,
-        references: {
-            // This is a reference to another model
-            model: Usuario,
-            // This is the column name of the referenced model
-            key: 'id'
-        }}
-})
+  },
+});
 Usuario.hasMany(Local, {
-    foreignKey: 'usuarioId'
-})
-Local.belongsTo(Usuario)
+  foreignKey: "usuarioId",
+});
+Local.belongsTo(Usuario);
 
-module.exports = Local
+module.exports = Local;
