# src/schemas/userSchema.js
@@ -1,15 +1,12 @@
-const yup = require('yup')
-
+const yup = require("yup");
 
 const usuarioSchema = yup.object().shape({
- 	nome: yup.string().required(),
- 	cpf: yup.string().length(11).required(),
- 	email: yup.string().email().required(),
- 	sexo: yup.string().nullable(),
- 	senha: yup.string().required(),
- 	data_nascimento: yup.date().notRequired()
+  nome: yup.string().required(),
+  cpf: yup.string().length(11).required(),
+  email: yup.string().email().required(),
+  sexo: yup.string().nullable(),
+  senha: yup.string().required(),
+  data_nascimento: yup.date().notRequired(),
 });
 
-
-
-module.exports = usuarioSchema
+module.exports = usuarioSchema;
